fix: stretch editor div

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+.__editor-box {
+  display: flex;
+  flex-direction: column;
+}
+
 .__editor {
   background: #ffffff;
   border: solid 1px #e0e0e0;
@@ -6,6 +11,7 @@
   margin-top: 10px;
   overflow: scroll;
   padding: 10px;
+  flex-grow: 1;
 }
 
 .__editor:focus {
